macros/tests/unhappy/expected_str_literal.test.stderr
error: expected string literal
 --> tests/unhappy/expected_str_literal.test.rs:8:19
  |
8 |     #[wasm_export(unchecked_return_type = something)]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
